<resources>
    <string name="app_name">Movilnet</string>
    <string name="usuario">Usuarios</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="numeroConsultar">NúmeroConsultar</string>
    <string name="configuration">Configuración</string>
    <string name="logout">Salir</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="contraseña_update_fragment">Contraseña</string>
    <string name="contraseña_update_nav">Contraseña</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="suscriptor">Suscriptor</string>
</resources>