<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_usuario"
            android:icon="@drawable/ic_usuario"
            android:title="@string/usuario"/>
        <item android:id="@+id/nav_consultar"
            android:icon="@drawable/ic_consultar"
            android:title="@string/numeroConsultar"/>
        <item android:id="@+id/nav_suscriptor"
            android:icon="@drawable/ic_suscriptor"
            android:title="@string/suscriptor"/>
        <item android:id="@+id/nav_numeros"
            android:icon="@drawable/ic_numeros"
            android:title="@string/numeros"/>
    </group>
    <item android:title="@string/configuration" android:icon="@drawable/ic_configuration">
        <menu>
            <item android:id="@+id/nav_cambioContrasena"
                android:icon="@drawable/ic_contrasena"
                android:title="@string/contraseña_update_nav"/>
            <item android:id="@+id/nav_salir"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout"/>
        </menu>
    </item>
</menu>